--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,12 +1,10 @@
 /* Import fonts. Both licensed under the Open Font License */
-/* Wei Huang's Work Sans */
-@import url("https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 /* Titus Kaphar and Reginald Dwayne Betts inspired typeface Redaction */
 @import url("redaction.css");
 
 /* Site-wide styling */
 body {
-	font-family: "Work Sans", sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	overflow: hidden;
 }
 
@@ -14,7 +12,14 @@ body {
 #cwdt {
 	font-family: "Redaction", serif;
 	font-style: italic;
-	font-size: 3vw;
+	font-size: 2vw;
+	margin: 0 0 0 0;
+}
+
+/* Work link */
+#subtitle {
+	text-align: center;
+	font-size: 0.75vw;
 }
 
 #root {
@@ -23,17 +28,21 @@ body {
 	height: 100vh;
 }
 
-
-/* Work link */
-#work-link {
-	text-align: center;
-	font-size: 1.2em;
-}
-
 /* Center an element on page */
 .center {
 	position: absolute;
+	text-align: center;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	width: 100vw;
+	transform: translateY(-50%);
+}
+
+@media only screen and (max-width: 600px) {
+	#cwdt {
+		font-size: 4vw;
+	}
+
+	#subtitle {
+		font-size: 2vw;
+	}
 }
